--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.button{
+    width: 10rem;
+    color: white;
+    border-radius: .25rem;
+    padding: .75rem;
+    background-color: rgba(50, 205, 50, 1);
+    transition: background-color;
+    transition-duration: 200ms;
+    cursor: pointer;
+    border: none;
+}
+.button:hover{
+    background-color: rgba(50, 205, 50, 0.8);
+}
+.buttonSecondary{
+    width: 10rem;
+    color: rgba(50, 205, 50, 1);
+    border-radius: .25rem;
+    padding: .75rem;
+    background-color: white;
+    border: 2px solid rgba(50, 205, 50, 1);
+    transition: background-color;
+    transition-duration: 200ms;
+    cursor: pointer;
+}
+.buttonSecondary:hover{
+    background-color: rgba(50, 205, 50, 0.8);
+    color:white;
+}
