--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,16 @@
     cursor: pointer;
     border: none;
 }
+.disabledButton{
+    background-color: lightgrey;
+    width: 10rem;
+    color: white;
+    border-radius: .25rem;
+    padding: .75rem;
+    transition: background-color;
+    transition-duration: 200ms;
+    border: none;
+}
 .button:hover{
     background-color: rgba(50, 205, 50, 0.8);
 }
@@ -27,6 +37,16 @@
     transition: background-color;
     transition-duration: 200ms;
     cursor: pointer;
+}
+.disabledSecondaryButton{
+    color: lightgrey;
+    border: 2px solid lightgrey;
+    width: 10rem;
+    border-radius: .25rem;
+    padding: .75rem;
+    background-color: white;
+    transition: background-color;
+    transition-duration: 200ms;
 }
 .buttonSecondary:hover{
     background-color: rgba(50, 205, 50, 0.8);
