--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@
     cursor: pointer;
     border: none;
 }
+.heading1{
+    @apply
+    text-4xl
+    font-bold
+}
 .disabledButton{
     background-color: lightgrey;
     width: 10rem;
